fixed arabic translate

--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -9,9 +9,9 @@
     "welcome": " اهلا بك",
     "balance": " الرصيد ",
     "youCanSPend": "  يمكنك انفاق ",
-    "everyDay": " كل يوم حتا نهاية الشهر ",
+    "everyDay": " كل يوم حتى نهاية الشهر ",
     "dailyReminderTitle": " تذكرة يومية ",
-    "notificationBody": " هل تذكرت ان تضيف تفقات اليوم؟. ",
+    "notificationBody": " هل تذكرت ان تضيف نفقات اليوم؟. ",
     "settings": " الاعدادات  ",
     "nameText": " الاسم  :    {userName} ",
     "changeName": "تعديل الاسم ",
@@ -24,7 +24,7 @@
     "falseNumber": "الرجاء ادخال رقم صحيح للمتابعة !",
     "negativeNumber": "الرجاء ادخال رقم موجب فقط ",
     "nullName": "لا يمكن للاسم ان يبقى فارغا ",
-    "shortName": "يجب ان يحتوي الاسم علا الأقل ثلاثة احرف ",
+    "shortName": "يجب ان يحتوي الاسم على الأقل ثلاثة احرف ",
     "longName": "لا يجب ان يكون الاسم اطول من 25 حرف",
     "changeSaved": "تمّ حفظ التغيرات الجديدة ",
     "cancel": "الغاء",
@@ -73,7 +73,7 @@
     "monthSalary": "ادخل راتبك الشهري",
     "nullSalary": "الرجاء ادخال راتبك الشهري هنا",
     "currencyAlert": "الرجاء تحديد العملة المحلية",
-    "showNumberOnly": " اظهار ارقام فقت ",
+    "showNumberOnly": " اظهار ارقام فقط ",
     "firstSalaryTip": "يمكنك الضغط هنا لمعرفة نفقاتك ",
     "secondSalaryTip": "يمكنك الضغط هنا لمعرفة كل مدخولك",
     "expensesTip": "ثلاثة قواعد هنا : \n\n\n 1_يمكنك الضغط على اي عنصر لمعرفة تفاصيل اكثر عنه \n\n2_اضغط مطولا علا اي عنصر لتعديله \n\n3_اسحب الى اليمين لحذف اي عنصر ",
@@ -82,7 +82,7 @@
     "next": "التالي",
     "noDetails": "لا يوجد تفاصيل للعرض..",
     "areYouSure": "هل انت متأكد ؟",
-    "deleteItemText": "انت علا وشك حذف ' {itemTitle} ' ",
+    "deleteItemText": "انت على وشك حذف ' {itemTitle} ' ",
     "yes": "نعم",
     "no": "لا"
     
